Archive2/cd/0e2ad6b2523fb0/output
main.cpp:32:7: error: object of type 'A' cannot be assigned because its copy assignment operator is implicitly deleted
    c = a.fun(b);
      ^
main.cpp:12:5: note: copy assignment operator is implicitly deleted because 'A' has a user-declared move constructor
    A(A&& a) : x(a.x){
    ^
1 error generated.
